--- a/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
@@ -113,13 +113,24 @@
                                 <h:inputText id="licencias" pt:placeholder="2" disabled="true" styleClass="uk-input" value="#{licenciasControlador.collectionDataModel.wrappedData.size()}"/>
                             </div>
                         </div>
+                        <div class="uk-width-2-5@m uk-width-1-1@s">
+                            <h:outputText styleClass="uk-form-label uk-text-capitalize" for="licencias" value="Personal" />
+                            <div class="uk-form-controls uk-flex uk-flex-right">
+                                <h:link styleClass="uk-button uk-button-primary uk-margin-right" outcome="coordinador">
+                                    <h:outputText value="Coordinadores" styleClass="uk-margin-small-right"/>
+                                    <h:outputText styleClass="uk-icon" pt:uk-icon="icon: users"/>
+                                    <f:param name="escuela" value="#{param['escuela']}"/>
+                                </h:link>
+                                <h:link styleClass="uk-button uk-button-primary" outcome="profesor">
+                                    <h:outputText value="Profesores" styleClass="uk-margin-small-right"/>
+                                    <h:outputText styleClass="uk-icon" pt:uk-icon="icon: users"/>
+                                    <f:param name="escuela" value="#{param['escuela']}"/>
+                                </h:link>
+                            </div>
+                        </div><!--
                         <h:panelGroup layout="block" styleClass="uk-width-2-5@m uk-width-1-1@s uk-inline" rendered="true">
-                            <h:link styleClass="uk-button uk-button-primary uk-position-bottom-right" outcome="coordinador">
-                                <h:outputText value="Coordinadores" styleClass="uk-margin-small-right"/>
-                                <h:outputText styleClass="uk-icon" pt:uk-icon="icon: users"/>
-                                <f:param name="escuela" value="#{param['escuela']}"/>
-                            </h:link>
-                         </h:panelGroup>
+
+                         </h:panelGroup>-->
                     </h:panelGroup>
                 </h:form>
             </div>
