--- a/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
@@ -66,13 +66,12 @@
                                         <h:outputText pt:uk-icon="icon: plus-circle; ratio: 1.5"/>
                                     </h:commandLink>
                                 </h:form>
-                                <!--<a href="#" class="uk-icon-button uk-icon-link" uk-icon="twitter"></a>-->
                             </div>
                         </div>
                     </div>
                     <div class="uk-card-body">
                         <h:form id="formulario-coordinador-profesor">
-                            <ui:fragment rendered="#{empty escuelaDashboardControlador.collectionDataModel.wrappedData}">
+                            <ui:fragment rendered="#{empty dashboardControlador.collectionDataModel.wrappedData}">
                                 <table class="uk-table uk-table-middle">
                                     <thead class="uk-background-primary">
                                         <tr>
@@ -97,9 +96,9 @@
                                             <td colspan="5">
                                                 <span class="letra-titulo">
                                                     <h:outputFormat value="#{etiqueta['pages.total']}" styleClass="letra-titulo">
-                                                        <f:param value="#{escuelaDashboardControlador.htmlDataTable.rowCount}"/>
-                                                        <f:param value="#{escuelaDashboardControlador.htmlDataTable.rowCount}"/>
-                                                        <f:param value="#{escuelaDashboardControlador.htmlDataTable.rowCount}"/>
+                                                        <f:param value="#{dashboardControlador.htmlDataTable.rowCount}"/>
+                                                        <f:param value="#{dashboardControlador.htmlDataTable.rowCount}"/>
+                                                        <f:param value="#{dashboardControlador.htmlDataTable.rowCount}"/>
                                                     </h:outputFormat>
                                                 </span>
                                             </td>
@@ -108,35 +107,34 @@
                                 </table>
                             </ui:fragment>
                             <h:dataTable
-                                    value="#{coordinadorDashboarControlador.collectionDataModel}"
-                                    binding="#{coordinadorDashboarControlador.htmlDataTable}"
-                                    rendered="#{not empty coordinadorDashboarControlador.collectionDataModel.wrappedData}"
+                                    rendered="#{not empty dashboardControlador.collectionDataModel.wrappedData}"
+                                    value="#{dashboardControlador.collectionDataModel}"
+                                    binding="#{dashboardControlador.htmlDataTable}"
                                     var="profesor"
                                     id="tabla-profesor"
                                     first="0"
                                     rows="5"
                                     styleClass="uk-table uk-table-divider uk-table-middle uk-table-small uk-table-hover uk-text-center tabla-profesor-dropdown"
-                                    headerClass="uk-background-primary uk-text-center"
                                     footerClass="uk-background-primary uk-text-left"
-                                    columnClasses=",,uk-text-center,uk-text-center,uk-text-center,uk-text-center">
-                                <h:column>
-                                    <f:facet name="header"><span class="letra-titulo">Nombre Profesor</span></f:facet>
+                                    columnClasses="uk-text-left,uk-text-center,uk-text-center,uk-text-center,uk-text-center">
+                                <h:column headerClass="uk-text-left uk-background-primary uk-width-1-3">
+                                    <f:facet name="header"><span class="letra-titulo">nombre profesor</span></f:facet>
                                     #{profesor.apellidoPaterno} #{profesor.apellidoMaterno} #{profesor.nombre}
                                 </h:column>
-                                <h:column>
-                                    <f:facet name="header"><span class="letra-titulo">N° de grupos</span></f:facet>
+                                <h:column headerClass="uk-background-primary uk-text-center uk-width-1-6">
+                                    <f:facet name="header"><span class="letra-titulo">número de grupos</span></f:facet>
                                     #{profesor.totalGrupos}
                                 </h:column>
-                                <h:column>
-                                    <f:facet name="header"><span class="letra-titulo">Tareas asignadas</span></f:facet>
+                                <h:column headerClass="uk-background-primary uk-text-center uk-width-1-6">
+                                    <f:facet name="header"><span class="letra-titulo">tareas asignadas</span></f:facet>
                                     NaN
                                 </h:column>
-                                <h:column>
-                                    <f:facet name="header"><span class="letra-titulo">Tareas por asignar</span></f:facet>
+                                <h:column headerClass="uk-background-primary uk-text-center uk-width-1-6">
+                                    <f:facet name="header"><span class="letra-titulo">tareas por asignar</span></f:facet>
                                     Nan
                                 </h:column>
-                                <h:column>
-                                    <f:facet name="header"><span class="letra-titulo">Opciones</span></f:facet>
+                                <h:column headerClass="uk-background-primary uk-text-center uk-width-1-6">
+                                    <f:facet name="header"><span class="letra-titulo">#{etiqueta['options']}</span></f:facet>
                                     <div class="uk-inline  ">
                                         <button class="uk-icon-button puntero" uk-icon="more-vertical" type="button"></button>
                                         <div uk-dropdown="boundary:.tabla-profesor-dropdown; mode: click" id="dropear" >
@@ -173,7 +171,7 @@
                                     </div>
                                 </h:column>
                                 <f:facet name="footer">
-                                    <pa:pie-tabla htmlDataTable="#{coordinadorDashboarControlador.htmlDataTable}"/>
+                                    <pa:pie-tabla htmlDataTable="#{dashboardControlador.htmlDataTable}"/>
                                 </f:facet>
                             </h:dataTable>
                         </h:form>
@@ -184,7 +182,7 @@
                             <h:form id="formulario-paginacion-prof">
                                 <div  styleClass="" pt:uk-grid="">
                                     <div class="uk-panel uk-flex uk-flex-left uk-width-1-1@s uk-width-1-2@m">
-                                        <pa:boton htmlDataTable="#{coordinadorDashboarControlador.htmlDataTable}"/>
+                                        <pa:boton htmlDataTable="#{dashboardControlador.htmlDataTable}"/>
                                     </div>
                                 </div>
                             </h:form>
